--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Vite App</title>
+    <title>F1 Telemetry App</title>
   </head>
   <body>
     <div id="app"></div>
